Make some code updates to be compatible with JDK 8.